# lane-detection

./: .gitignore  google_colab.ipynb  prototype.ipynb  pyproject.toml  train_network.ipynb
example/checkpoints/: training_11_results.csv
src/data/: A2D2_dataset.py  A2D2_reader.py
src/dataset/: dataset_base.py  datasets.py
src/model/: model_base.py  segmentation_model.py
src/reader/: reader_base.py  readers.py
src/utils/: parameters.py  preprocessing.py  transformation.py
