[tool.poetry]
name = "lane-det"
version = "0.1.0"
description = ""
authors = ["david00721 <david007214@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
matplotlib = "^3.8.1"
pydocstyle = "^6.3.0"
scikit-learn = "^1.3.2"
torch = {version = "^2.0.1+cu117", source = "torch"}
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp311-cp311-win_amd64.whl"}
requests = "^2.31.0"
tqdm = "^4.66.2"
pytorch-lightning = "^2.2.0.post0"
segmentation-models-pytorch = "^0.3.3"
tensorboard = "^2.16.2"
pandas = "^2.2.1"
torchsummary = "^1.5.1"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
mypy = "*"
pytest = "*"
pytest-cov = "^4.1.0"
ipykernel = "^6.26.0"
ipympl = "^0.9.3"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 160
